force-app/main/default/objects/Pedido_de_Venda__c/Pedido_de_Venda__c.object-meta.xml
<CustomObject>
    <description>A empresa ABC deseja modernizar seu sistema de acompanhamento de pedidos de vendas para garantir uma gestão mais eficiente. Para isso, será desenvolvido um objeto personalizado chamado &quot;Pedido de Venda&quot;.</description>
    <label>Pedido de Venda</label>
    <nameField>
        <label>Pedido de Venda</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pedidos de Vendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>