force-app/main/default/objects/Pedido_de_Venda__c/fields/data_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>data_de_entrega__c</fullName>
    <description>Informe a data de entrega e hora aproximada.</description>
    <inlineHelpText>Informe a data de entrega e hora aproximada.</inlineHelpText>
    <label>data_de_entrega</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>