force-app/main/default/objects/Pedido_de_Venda__c/fields/data_de_pedido__c.field-meta.xml
<CustomField>
    <fullName>data_de_pedido__c</fullName>
    <description>Informe a data do pedido e hora aproximada da solicitação;</description>
    <inlineHelpText>Informe a data do pedido e hora aproximada da solicitação;</inlineHelpText>
    <label>data_de_pedido</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>