force-app/main/default/objects/Pedido_de_Venda__c/fields/descricao_detalhada__c.field-meta.xml
<CustomField>
    <fullName>descricao_detalhada__c</fullName>
    <description>Descreva de forma detalhada os produtros ou serviçõs solicitados, inclua informações assim como imagens ou links.</description>
    <inlineHelpText>Descreva de forma detalhada os produtros ou serviçõs solicitados, inclua informações assim como imagens ou links.</inlineHelpText>
    <label>descricao_detalhada</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>