force-app/main/default/objects/Pedido_de_Venda__c/fields/Forma_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pagamento__c</fullName>
    <description>Informe a opção de pagamento escolhida.</description>
    <inlineHelpText>Informe a opção de pagamento escolhida.</inlineHelpText>
    <label>Forma_de_pagamento</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cartão de Crédito</fullName>
            </value>
            <value>
                <fullName>Transferência Bancária</fullName>
            </value>
            <value>
                <fullName>Boleto Bancário</fullName>
            </value>
            <value>
                <fullName>Pagamento na Entrega</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>