force-app/main/default/objects/Pedido_de_Venda__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <description>id de pedido de venda</description>
    <displayFormat>I-{0000}</displayFormat>
    <inlineHelpText>id de pedido de venda</inlineHelpText>
    <label>id-pedido</label>
    <type>AutoNumber</type>
</CustomField>