force-app/main/default/objects/Pedido_de_Venda__c/fields/Porcentagem_de_conclusao__c.field-meta.xml
<CustomField>
    <fullName>Porcentagem_de_conclusao__c</fullName>
    <description>Descreva qual porcentagem de conclusão o produto ou serviço se encontra.</description>
    <inlineHelpText>Descreva qual porcentagem de conclusão o produto ou serviço se encontra.</inlineHelpText>
    <label>Porcentagem_de_conclusao</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>