force-app/main/default/objects/Pedido_de_Venda__c/fields/Solicitacoes__c.field-meta.xml
<CustomField>
    <fullName>Solicitacoes__c</fullName>
    <description>é possivel a seleção de multiplos produtos ou serviços.</description>
    <inlineHelpText>é possivel a seleção de multiplos produtos ou serviços.</inlineHelpText>
    <label>Solicitacoes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compra de produtos</fullName>
            </value>
            <value>
                <fullName>Venda de produtos</fullName>
            </value>
            <value>
                <fullName>compra de serviços</fullName>
            </value>
            <value>
                <fullName>venda de serviços</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>