force-app/main/default/objects/Pedido_de_Venda__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status da Venda</description>
    <inlineHelpText>Status da Venda</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Processamento</fullName>
            </value>
            <value>
                <fullName>Aguardando Pagamento</fullName>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>