force-app/main/default/objects/Pedido_de_Venda__c/fields/Urgente__c.field-meta.xml
<CustomField>
    <fullName>Urgente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selecione em caso de urgencia.</description>
    <inlineHelpText>Selecione em caso de urgencia.</inlineHelpText>
    <label>Urgente</label>
    <type>Checkbox</type>
</CustomField>